# qtdcm

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  CTestConfig.cmake  QtDcmConvert_8cpp.html  QtDcmConvert_8cpp__incl.dot  QtDcmConvert_8cpp__incl.md5  QtDcmConvert_8cpp_source.html  QtDcmConvert_8h.html  QtDcmConvert_8h__dep__incl.dot  QtDcmConvert_8h__dep__incl.md5  QtDcmConvert_8h__incl.dot  QtDcmConvert_8h__incl.md5  QtDcmConvert_8h_source.html  QtDcmDcm2niiSettingsWidget_8cpp.html  QtDcmDcm2niiSettingsWidget_8cpp__incl.dot  QtDcmDcm2niiSettingsWidget_8cpp__incl.md5  QtDcmDcm2niiSettingsWidget_8cpp_source.html  QtDcmDcm2niiSettingsWidget_8h.html  QtDcmDcm2niiSettingsWidget_8h__dep__incl.dot  QtDcmDcm2niiSettingsWidget_8h__dep__incl.md5  QtDcmDcm2niiSettingsWidget_8h__incl.dot  QtDcmDcm2niiSettingsWidget_8h__incl.md5  QtDcmDcm2niiSettingsWidget_8h_source.html  QtDcmFindCallback_8cpp.html  QtDcmFindCallback_8cpp__incl.dot  QtDcmFindCallback_8cpp__incl.md5  QtDcmFindCallback_8cpp_source.html  QtDcmFindCallback_8h.html  QtDcmFindCallback_8h__dep__incl.dot  QtDcmFindCallback_8h__dep__incl.md5  QtDcmFindCallback_8h__incl.dot  QtDcmFindCallback_8h__incl.md5  QtDcmFindCallback_8h_source.html  QtDcmFindDicomdir_8cpp.html  QtDcmFindDicomdir_8cpp.js  QtDcmFindDicomdir_8cpp__incl.dot  QtDcmFindDicomdir_8cpp__incl.md5  (+514 more)
CMake/: CPackConfig.cmake  CPackDebConfig.cmake  CPackNsisConfig.cmake  CPackRpmConfig.cmake  FindDCMTK.cmake  FindDCMTK2.cmake  FindVistal.cmake  FixDCMTKMacLink.cmake  QtDCMConfig.cmake.in  QtDCMSettings.cmake  QtDcmCPackConfig.cmake  UseQtDCM.cmake.in
Code/: CMakeLists.txt  QtDcm.cpp  QtDcm.h  QtDcm2.cpp  QtDcm2.h  QtDcmConfig.h.in  QtDcmConvert.cpp  QtDcmConvert.h  QtDcmDateDialog.cpp  QtDcmDateDialog.h  QtDcmDcm2niiSettingsWidget.cpp  QtDcmDcm2niiSettingsWidget.h  QtDcmExportThread.cpp  QtDcmExportThread.h  QtDcmFindCallback.cpp  QtDcmFindCallback.h  QtDcmFindDicomdir.cpp  QtDcmFindDicomdir.h  QtDcmFindScu.cpp  QtDcmFindScu.h  QtDcmFindScuSignalManager.cpp  QtDcmFindScuSignalManager.h  QtDcmImage.cpp  QtDcmImage.h  QtDcmImportWidget.cpp  QtDcmImportWidget.h  QtDcmLocalDicomSettingsWidget.cpp  QtDcmLocalDicomSettingsWidget.h  QtDcmManager.cpp  QtDcmManager.h  QtDcmMoveDicomdir.cpp  QtDcmMoveDicomdir.h  QtDcmMoveScu.cpp  QtDcmMoveScu.h  QtDcmPatient.cpp  QtDcmPatient.h  QtDcmPreferences.cpp  QtDcmPreferences.h  QtDcmPreferencesDialog.cpp  QtDcmPreferencesDialog.h  (+35 more)
Documentation/Doxygen/: CMakeLists.txt  architecture.h  doxyfile.in  examplepage.h  footer.html  header.html  integrationpage.h  mainpage.h  qtdcm_dox.css  step1.h  step2.h  step3.h  widgetspage.h
Example/: CMakeLists.txt  FindQtDCM.cmake  dicom.cpp  dicom.h  dicom.ui  main.cpp
Resources/: qtdcm.qrc
cmake/: CPack.QtDCMDescription.txt  CPack.QtDCMLicense.txt  CPack.QtDCMWelcome.txt  CPackDebConfig.cmake  CPackNsisConfig.cmake  QtDCMConfig.cmake.in  QtDCMConfig.install.cmake.in  QtDCMConfigVersion.cmake.in  QtDCMGenerateInstall.cmake  QtDCMSettings.cmake  QtDcmCPackConfig.cmake  UseQtDCM.cmake.in
documentation/: CMakeLists.txt  DoxygenLayout.xml  doxyfile.in  footer.html  header.html  integrationpage.h  mainpage.h  rsync.txt  step1.h  step2.h  step3.h
documentation/Doxygen/: CMakeLists.txt  DoxygenLayout.xml  doc_makeall.sh.in  doxyfile.in  examplepage.h  header.html  qtdcm_dox.css
example/: CMakeLists.txt  FindQtDCM.cmake  dicom.h  main.cpp
resources/: qtdcm.qrc
resources/Images/: dicom.xpm
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+57 more)
src/: CMakeLists.txt  QtDcm.cpp  QtDcm.h  QtDcmConvert.cpp  QtDcmDcm2niiSettingsWidget.cpp  QtDcmDcm2niiSettingsWidget.h  QtDcmFindDicomdir.cpp  QtDcmFindDicomdir.h  QtDcmFindScu.cpp  QtDcmImportWidget.h  QtDcmLocalDicomSettingsWidget.h  QtDcmManager.cpp  QtDcmManager.h  QtDcmMoveDicomdir.cpp  QtDcmMoveDicomdir.h  QtDcmMoveScu.cpp  QtDcmMoveScu.h  QtDcmPreferences.h  QtDcmPreferencesDialog.cpp  QtDcmPreferencesDialog.h  QtDcmPreferencesWidget.h  QtDcmPreviewWidget.cpp  QtDcmSerie.cpp  QtDcmSerieInfoWidget.cpp  QtDcmSerieInfoWidget.h  QtDcmServer.h  QtDcmServersDicomSettingsWidget.h  QtDcmStoreScu.cpp  QtDcmStoreScu.h  QtDcmStudy.cpp  QtDcmStudy.h  qtdcmDcm2niiSettingsWidget.ui  qtdcmImportWidget.ui  qtdcmLocalDicomSettingsWidget.ui  qtdcmPreviewWidget.ui  qtdcmSerieInfoWidget.ui  qtdcmServersDicomSettingsWidget.ui  qtdcmpreferencesdialog.ui
